apps/ntfy/base/ntfy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-svc
spec:
  selector:
    app: ntfy-app
  ports:
  - port: 80
    targetPort: http
